@@ -15,7 +15,14 @@
 namespace Castle.ActiveRecord
 {
 	using System;
+	using System.Collections;
+	
+	using NHibernate.Type;
 
+	/// <summary>
+	/// Base class for ActiveRecord entities
+	/// that are interested in NHibernate's hooks.
+	/// </summary>
 	[Serializable]
 	public abstract class ActiveRecordHooksBase
     {
@@ -25,7 +32,7 @@ namespace Castle.ActiveRecord
         /// </summary>
         /// <param name="state"></param>
         /// <returns>Return <c>true</c> if you have changed the state. <c>false</c> otherwise</returns>
-        protected internal virtual bool BeforeSave(System.Collections.IDictionary state)
+        protected virtual internal bool BeforeSave(IDictionary state)
 		{
             return false;
         }
@@ -37,7 +44,7 @@ namespace Castle.ActiveRecord
         /// </summary>
         /// <param name="adapter"></param>
         /// <returns>Return <c>true</c> if you have changed the state. <c>false</c> otherwise</returns>
-        protected internal virtual bool BeforeLoad(System.Collections.IDictionary adapter) 
+        protected virtual internal bool BeforeLoad(IDictionary adapter) 
 		{
             return false;
         }
@@ -48,8 +55,60 @@ namespace Castle.ActiveRecord
         /// from the database.
         /// </summary>
         /// <param name="adapter"></param>
-        protected internal virtual void BeforeDelete(System.Collections.IDictionary adapter) 
+        protected virtual internal void BeforeDelete(IDictionary adapter) 
 		{
         }
+
+		/// <summary>
+		/// Called before a flush
+		/// </summary>
+		protected virtual internal void PreFlush()
+		{
+		}
+
+		/// <summary>
+		/// Called after a flush that actually ends in execution of the SQL statements required to
+		/// synchronize in-memory state with the database.
+		/// </summary>
+		protected virtual internal void PostFlush()
+		{
+		}
+
+		/// <summary>
+		/// Called when a transient entity is passed to <c>SaveOrUpdate</c>.
+		/// </summary>
+		/// <remarks>
+		///	The return value determines if the object is saved
+		///	<list>
+		///		<item><c>true</c> - the entity is passed to <c>Save()</c>, resulting in an <c>INSERT</c></item>
+		///		<item><c>false</c> - the entity is passed to <c>Update()</c>, resulting in an <c>UPDATE</c></item>
+		///		<item><c>null</c> - Hibernate uses the <c>unsaved-value</c> mapping to determine if the object is unsaved</item>
+		///	</list>
+		/// </remarks>
+		/// <returns></returns>
+		protected virtual internal object IsUnsaved()
+		{
+			return null;
+		}
+
+		/// <summary>
+		/// Called from <c>Flush()</c>. The return value determines whether the entity is updated
+		/// </summary>
+		/// <remarks>
+		///		<list>
+		///			<item>an array of property indicies - the entity is dirty</item>
+		///			<item>an empty array - the entity is not dirty</item>
+		///			<item><c>null</c> - use Hibernate's default dirty-checking algorithm</item>
+		///		</list>
+		/// </remarks>
+		/// <param name="id"></param>
+		/// <param name="previousState"></param>
+		/// <param name="currentState"></param>
+		/// <param name="types"></param>
+		/// <returns>An array of dirty property indicies or <c>null</c> to choose default behavior</returns>
+		protected virtual internal int[] FindDirty(object id, IDictionary previousState, IDictionary currentState, IType[] types)
+		{
+			return null;
+		}
     }
 }
