@@ -1,5 +1,10 @@
 beta 4
 ======
+
+- Add more hookable methods.
+
+- Refactored Validation support (still need more tests)
+
 - Brought ActiveRecordMediator.Generic inline with ActiveRecordMediator.  This is a breaking change (removal of a few methods/renaming of a few existing).
 
 beta 3
